🔀 :: 에러 해결