@@ -16,8 +16,8 @@ import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
 import java.io.IOException;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 
 @RequiredArgsConstructor
@@ -34,9 +34,10 @@ public class AuthenticationFilter extends OncePerRequestFilter {
 
         String userId = request.getHeader("Request-User-Id");
         UserRole userRole = UserRole.valueOf(request.getHeader("Request-User-Role"));
-        List<String> userAuthorities = Collections.singletonList(request.getHeader("Request-User-Authorities"));
-        Collection<SimpleGrantedAuthority> authorities = new ArrayList<>();
+        List<String> userAuthorities = List.of(request.getHeader("Request-User-Authorities").split(" "));
+        System.out.println(userAuthorities);
 
+        Collection<SimpleGrantedAuthority> authorities = new ArrayList<>();
         for (String userAuthority : userAuthorities) {
             authorities.add(new SimpleGrantedAuthority(userAuthority));
         }
